test/files/continuations-neg/t5445.scala
import scala.util.continuations._

object Test {
  def foo(block: Unit @suspendable ): Unit @suspendable = {}
}
